--- a/_posts/2019-07-03-the-us-narrative-today.html
+++ b/_posts/2019-07-03-the-us-narrative-today.html
@@ -2614,107 +2614,107 @@ stories:
   domain: http://www.mitchellrepublic.com/
   link: https://www.mitchellrepublic.com/business/agriculture/2987501-Midwestern-farmers%E2%80%99-struggles-with-extreme-weather-are-visible-from-space
 images:
-- name: razorwire-DSC-0080-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dali-two.jpg
-- name: berlinwall2-berlinwall-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-ww2-color.jpg
-- name: sand-hand-sand-hand-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-feed-people.jpg
-- name: file-00_00_00_00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00_00_00_00.jpg
-- name: mediterranean-mediterranean-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-smooth-ride.jpg
-- name: death-valley-death-valley-national-park-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-purple-storm.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-gan-vogh.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-wols.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-wols.JPG
-- name: aws-s3-stories-new-machine-road-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-machine-road-blue-circuit-4.jpg
-- name: mosaic-face-mosaic-face-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-marcel-duchamp.jpg
-- name: nyc-flag-nycflag-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-mucha-mult.jpg
-- name: containership-containership-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-atari-asteroids.jpg
-- name: server-cloud-server-racks-clouds-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-propaganda-leaflets.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-really-hot.jpg
-- name: oldhouse-granaryfield-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-rainbow-festival.jpg
-- name: gears-4882162452-fa3126b38d-b-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-satan-red.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-pablo-blue.jpg
-- name: mosaic-face-mosaic-face-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-sunday.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-gred-mash.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-gred-mash.JPG
-- name: oldroad-old-road-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-satan-red.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-far-away.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-far-away.JPG
-- name: nazi-invasion-IMG_6170.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6170.jpg
-- name: hollywood-building-hollywood-building-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-atari-missle.jpg
-- name: old-church-oldchurch-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-light-dali.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-pablo-blue.jpg
-- name: art-museum-art-museum-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-purp-paper.jpg
-- name: stories-ellis-island-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-ellis-island-nazi-poster.jpg
-- name: white-house-lawn-white-house-window-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-clean-view.jpg
-- name: old-school-house-old-schoolhouse-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-dali-three.jpg
-- name: server-cloud-server-racks-clouds-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-marcel-duchamp.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-rainbow-festival.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-alien-goggles.jpg
-- name: old-granary-field-oldhouse-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-blue-circuit.jpg
-- name: ellis-island-ellis-island-room-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-post-modern.jpg
-- name: old-door-lock-old-door-lock-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-green-zuma.jpg
-- name: eduardo-eduardo-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dark-soul.jpg
-- name: docks-docks-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-sand-paper.jpg
-- name: statue-of-liberty-front-view-statueofliberty-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-internet-numbers.jpg
-- name: mistywoods-babyfoot-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-really-hot.jpg
-- name: border-crossing-bordercrossing-purp-paper.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-purp-paper.png
-- name: mediterranean-mediterranean-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-satan-red.jpg
-- name: power-lines-power-lines-empty-space-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-yellow-paper.jpg
-- name: amusement-park-amusement-park-2-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-free-woman.jpg
-- name: mediterranean-mediterranean-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-yellow-collage.jpg
-- name: powerlines-power-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-kand-two.jpg
-- name: hollywood-building-hollywood-building-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-far-away.jpg
-- name: aws-s3-stories-statue-face-open-mouth-blue-circuit-5.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-statue-face-open-mouth-blue-circuit-5.png
-- name: ellis-island-ellisisland-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-emily-carr.jpg
-- name: stories-containership-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-containership-blue-circuit.jpg
-- name: oldbarn-oldbarn-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-cinnamon-rolls.jpg
-- name: statue-of-liberty-front-view-statueofliberty-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-bright-sand.jpg
+- name: lincoln-memorial-lincolnmemorial-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-pablo-blue.jpg
+- name: fence-gorilla.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-gorilla.jpg
+- name: trucksilo-trucksilo-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-deep-connections.jpg
+- name: powerlines-power-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-dark-rain.jpg
+- name: gypsy-wagon-gypsywagon-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-graham-sutherland.jpg
+- name: crow_oily_mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_oily_mcoilface.jpg
+- name: white-house-lawn-white-house-lawn-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-cinnamon-rolls.jpg
+- name: oldhouse-granaryfield-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-creativity.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-dali-two.jpg
+- name: stories-new-68-113-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-68-113-800-500-0-max-0--1--1.jpg
+- name: crow-crow-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-blue-brush.jpg
+- name: aws-s3-meadow-meadow-bright-sand-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-meadow-meadow-bright-sand-still.jpg
+- name: meadowbutterfly-meadow-butterfly-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-dali-two.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-sunday.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-sunday.png
+- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-3.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-3.png
+- name: old-granary-field-granaryfield-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-smoking-cigarette.jpg
+- name: ellis-island-ellisisland-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-neo-instinct.jpg
+- name: oldroad-old-road-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-blue-electricity.jpg
+- name: oldroad-old-road-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-atari-asteroids.jpg
+- name: birdhouse-birdhouse-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-colored-circuits.jpg
+- name: curtain-curtain-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-wols.jpg
+- name: border-fence-border-fence-on-hill-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-green-zuma.jpg
+- name: oldbarn-oldbarn-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-blue-circuit.jpg
+- name: rockingchair-rockingchair-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-oily-mcoilface.jpg
+- name: old-granary-field-oldhouse-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-purple-pond.jpg
+- name: wind-mills-windmills-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-atari-missle.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-alien-goggles.jpg
+- name: adam-smith-adam-smith-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-circuit-3.jpg
+- name: machine-road-machine-road-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-gan-vogh.jpg
+- name: oldhousecars-house-old-cars-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-colorful-blocks.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-really-hot.jpg
+- name: rain-princess-IMG_7527.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7527.jpg
+- name: gypsymosaic-gypsy-eyes-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-rainbow-festival.jpg
+- name: downtown-trucksilo-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-purp-paper.jpg
+- name: border-crossing-bordercrossing-colorful-blocks.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-colorful-blocks.png
+- name: oldhouse-oldhouse-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-really-hot.jpg
+- name: white-house-whitehouse-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-dark-soul.jpg
+- name: aws-s3-stories-new-art-museum-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-art-museum-light-dali.jpg
+- name: paris-paris-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-creativity.jpg
+- name: yosemite-yosemite-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-bright-sand.jpg
+- name: oldroad-old-road-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dark-dali.jpg
+- name: oldhouse-granaryfield-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-hot-spicy.jpg
+- name: mediterranean-mediterranean-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-dali-two.jpg
+- name: border-crossing-bordercrossing-pablo-blue.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-pablo-blue.png
+- name: trucksilo-trucksilo-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-alien-goggles.jpg
+- name: walled-garden-walled-garden-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-marcel-duchamp.jpg
+- name: sand-hand-sand-hand-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-green-zuma.jpg
+- name: paris-paris-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-cinnamon-rolls.jpg
+- name: old-church-oldchurch-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-smooth-ride.jpg
+- name: old-granary-field-granaryfield-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-blue-brush.jpg
+- name: death-valley-death-valley-national-park-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-colorful-dream.jpg
 ---
 Work Begins On Vail Resort Golden Peak Expansion.&nbsp;Time Is Running Out To Recover Losses From Puerto Rico Bonds And Funds.&nbsp;Mentor Police Officer Involved In Geauga County Crash While Transporting Inmate.&nbsp;Special Prosecutor Named For Indiana Shooting Of Black Man.&nbsp;James Donald Don King.&nbsp;Disasters And Emergencies Can Happen At Any Moment, Are You Ready?.&nbsp;Elberton Police Department To Offer Active Shooter Course.&nbsp;Opelka Pulls Off Another Upset At Wimbledon, Beats Wawrinka.&nbsp;
